~ revert unnecessary changes around --add-opens